[metadata]
name = 'pepinillo'
version = '0.0.1'
description = ''
author = 'U.N. Owen'
author_email = 'me@un.known'
license = 'Apache-2.0'
url = 'https://github.com/PIQuIL/Pepinillo'

[requires]
python_version = ['3.5', '3.6']

[build-system]
requires = ['setuptools', 'wheel', 'numpy']

[tool.hatch.commands]
prerelease = 'hatch build'
